# MAID

./: .dockerignore  .gitignore  Dockerfile  certainty_variation_analysis.csv  docker-compose.yml  evaluate_csv.py  extract_raw.py  generate_prompts.py  generate_prompts_free.py  int_result.py  pyproject.toml  requirements.txt  run_llm.py  run_llm.sh.o17557879  run_llm.sh.o17563146  run_llm.sh.o17564322  run_llm.sh.o17565225  test.py  test_chara.ipynb  zzz_run_llm_free.py
.devcontainer/: devcontainer.json
_run/: run_llm.sh
new_test/: evaluate_csv_new.py  extract_raw_new.py  generate_prompts_new.py  llama3_blank_answers.jsonl  run_llm_new.py
new_test/prompts/: prob_weigh_prompts_12.jsonl  prob_weigh_prompts_control.jsonl  prob_weigh_prompts_cot.jsonl  prob_weigh_prompts_lion.jsonl  prob_weigh_prompts_mark.jsonl  prob_weigh_prompts_mark_mukankei.jsonl  prob_weigh_prompts_mukankei.jsonl
outputs/evaluate/: gpt4.1-mini_0.5_evaluated.csv  gpt4.1-mini_0.7_evaluated.csv  gpt4.1_evaluated_0.csv  gpt41Mx_evalusted.csv  gpt41My_evalusted.csv  gpt41_0.9_evalusted.csv  gpt41_evalusted.csv  gpt41_mini_evalusted.csv  gpt41_mini_test_evalusted.csv  llama4_0.7_evalusted.csv  llama4_0.9_evalusted.csv
outputs/extract_data/: gpt4.1-mini_0.5_extracted.csv  gpt4.1-mini_0.7_extracted.csv  gpt4.1-mini_extracted.csv  gpt4.1_extracted_0.csv  gpt41Mx_extracted.csv  gpt41My_extracted.csv  gpt41_0.9_extracted.csv  (+4 more)
prompts/: prob_weigh_prompts.jsonl  prob_weigh_prompts_free.jsonl
test_chara/: summary_age.csv  summary_cancer_type.csv  summary_name.csv
utils/: utils_eval.py
(+141 files in other folders)
