[project]
name = "maid"
version = "0.1.0"
description = ""
authors = [
    {name = "rshibaki",email = "ryota.shibaki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "huggingface-hub (>=0.32.2,<0.33.0)",
    "transformers (>=4.52.3,<5.0.0)",
    "accelerate (>=1.7.0,<2.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "openai (>=1.86.0,<2.0.0)",
    "together (>=1.5.13,<2.0.0)"
]

[tool.poetry]
packages = [{include = "maid", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
